gateway-api-stuff/development-hat/route-canary.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: development
spec:
  parentRefs:
  - name: shared-public-gateway-my-dummy-colored-app
    namespace: infrastructure
  hostnames:
   - "my-dummy-colored-app-exposed-by-gateway-api.net"
  rules:
  - matches:
    - path:
        value: /
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: my-header
              value: foo
      - type: URLRewrite
        urlRewrite:
          # hostname: elsewhere.example
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /newpath
    backendRefs:
    - name: dummy-v1-blue
      port: 3000
  - matches:
    - headers:
      - name: traffic
        value: test
    backendRefs:
    - name: dummy-v2-green
      port: 3000
