gateway-api-stuff/development-hat/route-easy.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: development
spec:
  parentRefs:
  - name: shared-public-gateway-my-dummy-colored-app
    namespace: infrastructure
  hostnames:
   - "my-dummy-colored-app-exposed-by-gateway-api.net"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: dummy-v1-blue
      port: 3000
